--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ MONGODB_URI = mongodb://dhruvtiwari:dhruv1234@cluster0-shard-00-00.alfde.mongodb
 AUTH_EMAIL = dhruvtiwari003@gmail.com
 
 AUTH_PASS = kvlxzrscvqqckofb
+
+AWS_ACCESS_KEY_ID = "AKIAS6S2DMVMT5P6PSVI"
+AWS_SECRET_ACCESS_KEY = "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"
+
+AWS_BUCKET_NAME = "fintapistorage"
+
+
+JWT_SEC = hereisdhruvtiwarisecretkey
